// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinusIcon: Component should render correctly 1`] = `
<minus.svg
  style={
    Object {
      "fill": "#FFF",
      "height": 30,
      "shapeRendering": "crispEdges",
      "width": 30,
    }
  }
/>
`;

exports[`MinusIcon: Component should render with custom styles 1`] = `
<minus.svg
  style={
    Object {
      "fill": "blue",
      "height": 30,
      "shapeRendering": "crispEdges",
      "width": 30,
    }
  }
/>
`;
